(executable
  (name driver)
  (modules driver)
  (libraries ctypes test_constants_stubs tests_common))

(rule
  (targets generated_stubs.c)
  (action (run %{exe:driver.exe} --c-file %{targets})))

(rule
  (targets generated_bindings.ml)
  (action (run %{exe:driver.exe} --ml-file %{targets})))

(c_executable
  (name generated_stubs)
)

(library
 (name test_constants_bindings)
 (wrapped false)
 (c_names generated_stubs)
 (modules generated_bindings)
 (libraries ctypes test_functions)
) 
